fixed the broken layout in menu.html, also added scrolling animation

--- a/css/main.css
+++ b/css/main.css
@@ -545,7 +545,10 @@ a.logo {
 
 /* food menu list stuff*/
 #foodItems{
-
+	display: inline-flex;
+}
+#coffee, #tea, #baked_goods{
+	display: inline-block;
 }
 
 
